objects/SO_Enquiry_to_Opportunity__mdt.object
<CustomObject>
    <label>Enquiry to Opportunity</label>
    <pluralLabel>Enquiry to Opportunitys</pluralLabel>
    <fields>
        <fullName>SO_Mapping_Type__c</fullName>
        <label>Mapping Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SVO</fullName>
                    <default>true</default>
                    <label>SVO</label>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Enquiry_Field__c</fullName>
        <label>Enquiry Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Opportunity_Field__c</fullName>
        <label>Opportunity Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>